--- a/STUDENTS/Denis Bushuev/project/src/index.html
+++ b/STUDENTS/Denis Bushuev/project/src/index.html
@@ -7,7 +7,56 @@
     <title>React</title>
 </head>
 <body>
-    <div id="root"></div>
-    <script src="js/app.js"></script>
+    <div class="container">
+        <div class="chat">
+            <input type="search" class="search" placeholder="Search">
+            <div class="user">
+                <img src="https://placehold.it/100x80" alt="Изображение пользователя" class="img-user">
+                <span class="title-user">+7(900)000-00-00</span>
+                <span class="text-user">Test text user</span>
+            </div>
+            <div class="user">
+                <img src="https://placehold.it/100x80" alt="Изображение пользователя" class="img-user">
+                <span class="title-user">+7(900)000-00-00</span>
+                <span class="text-user">Test text user</span>
+            </div>
+            <div class="user">
+                <img src="https://placehold.it/100x80" alt="Изображение пользователя" class="img-user">
+                <span class="title-user">+7(900)000-00-00</span>
+                <span class="text-user">Test text user</span>
+            </div>
+            <div class="user">
+                <img src="https://placehold.it/100x80" alt="Изображение пользователя" class="img-user">
+                <span class="title-user">+7(900)000-00-00</span>
+                <span class="text-user">Test text user</span>
+            </div>
+            <div class="user">
+                <img src="https://placehold.it/100x80" alt="Изображение пользователя" class="img-user">
+                <span class="title-user">+7(900)000-00-00</span>
+                <span class="text-user">Test text user</span>
+            </div>
+            <div class="user">
+                <img src="https://placehold.it/100x80" alt="Изображение пользователя" class="img-user">
+                <span class="title-user">+7(900)000-00-00</span>
+                <span class="text-user">Test text user</span>
+            </div>
+            <div class="user">
+                <img src="https://placehold.it/100x80" alt="Изображение пользователя" class="img-user">
+                <span class="title-user">+7(900)000-00-00</span>
+                <span class="text-user">Test text user</span>
+            </div>
+            <div class="user">
+                <img src="https://placehold.it/100x80" alt="Изображение пользователя" class="img-user">
+                <span class="title-user">+7(900)000-00-00</span>
+                <span class="text-user">Test text user</span>
+            </div>
+            <div class="user">
+                <img src="https://placehold.it/100x80" alt="Изображение пользователя" class="img-user">
+                <span class="title-user">+7(900)000-00-00</span>
+                <span class="text-user">Test text user</span>
+            </div>
+        </div>
+        <div id="root" class="msg"></div>
+    </div>
 </body>
 </html>
