--- a/STUDENTS/Yuriy Yastrebov/project/src/index.html
+++ b/STUDENTS/Yuriy Yastrebov/project/src/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Chat</title>
 </head>
 <body>
-    <h1>Hello React</h1>
-    <div id="app">
-
-    </div>
+    <div id="root"></div>
 </body>
 </html>
