--- a/STUDENTS/Maxim Rosin/3/src/index.html
+++ b/STUDENTS/Maxim Rosin/3/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <h1>React APP</h1>
+    <h1 class="text-center">React APP</h1>
     <div id="root"></div>
 </body>
 </html>
