--- a/STUDENTS/Nick Strelchenko/papka/src/index.html
+++ b/STUDENTS/Nick Strelchenko/papka/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
     <link rel='stylesheet' href='style.css'>
     <title>Document</title>
 </head>
@@ -12,5 +11,5 @@
 
     <div id ='root'></div>
 
-</body>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
