--- a/STUDENTS/Egor Salomatin/src/index.html
+++ b/STUDENTS/Egor Salomatin/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>First React App</title>
+    <title>Messenger</title>
 </head>
 <body>
     <div id="root"></div>
